force-app/main/default/objects/LLC_BI__Product_Package_Team__c/fields/LLC_BI__Assigned_Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Assigned_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not currently used, as the Product Package Team is not currently leveraged within product package. Instead, Functionality for Team Members is built into the Visual Force related list view for Product Package Loan Team Members.</description>
    <label>Role</label>
    <referenceTo>LLC_BI__Role__c</referenceTo>
    <relationshipLabel>Product Package Team Members</relationshipLabel>
    <relationshipName>Product_Package_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>