force-app/main/default/objects/LLC_BI__Product_Package_Team__c/fields/LLC_BI__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Package__c</fullName>
    <description>This field will be automatically populated when creating a team member record from the product package. This field is a master detail field, used to specify the Product Package that the Product Package team is associated to.</description>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipName>Product_Package_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>