force-app/main/default/objects/LLC_BI__Product_Package_Team__c/fields/LLC_BI__User__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a look up to an nCino user that will be assigned a role, and associated to the Product Package team. This is a manually entered field and is required to appropriately associate the team member to the product package.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Package_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>